# Hydro_NMB

./: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/BLE/: BLE.c  CMakeLists.txt
components/BLE/include/: BLE.h
components/Eth_WiFI_Mananger/: CMakeLists.txt  Eth_WiFI_Mananger.c
components/Eth_WiFI_Mananger/include/: Eth_WiFI_Mananger.h
components/configuration/: CMakeLists.txt  configuration.c
components/configuration/include/: configuration.h
components/data_structure/: CMakeLists.txt  data_structure.c
components/data_structure/include/: data_structure.h
components/data_structure_2/: CMakeLists.txt  data_structure_2.c
components/data_structure_2/include/: data_structure_2.h
components/emmc/: CMakeLists.txt  emmc.c
components/emmc/include/: emmc.h
components/test_azure_sdk/: CMakeLists.txt  test_azure_sdk.c
components/test_azure_sdk/include/: test_azure_sdk.h
components/uart/: CMakeLists.txt  uart.c
components/uart/include/: uart.h
components/wolfTPM/: CMakeLists.txt
components/wolfTPM/include/wolfTPM/: tpm2_types.h  tpm_io_espressif.h
components/wolfTPM/src/: tpm2.c  tpm2_wrap.c  tpm_io_espressif.c
main/: main.c
